landing page and game over modal

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&display=swap');
+
+@theme {
+  --font-clarendon: "Besley", serif;
+}
